--- a/css/main.css
+++ b/css/main.css
@@ -2918,7 +2918,6 @@ footer p {
   .ContactUs .form-contact-us .card {
     width: 100%;
   }
-<<<<<<< Updated upstream
 
   .CartPage .Deatiles .PatientInfo .card {
     margin: 0px;
@@ -2950,6 +2949,56 @@ footer p {
     text-align: center;
   }
 }
-=======
+.OffCanvasCart-item{
+  border-radius: 6px;
+border: 1px solid var(--foundation-blue-light-hover, #E0E1ED);
+background: var(--Style, #FFF);
+padding: 20px;
 }
->>>>>>> Stashed changes
+.OffCanvasCart-item .cartItemHeader{
+  display: flex ;
+  justify-content: space-between;
+}
+.CartItemContainer{
+  border-radius: 12px;
+border: 1px solid var(--foundation-blue-light-hover, #E0E1ED);
+background: var(--Foundation-Blue-Light, #F2F3F4);
+padding: 10px;
+}
+.CartItemContainer .HeaderNumber{
+  border-radius: 0px 100px 100px 100px;
+background: var(--Foundation-Blue-Normal, #2F3584);
+width: 43px;
+height: 43px;
+padding: 10px;
+color:white;
+}
+.CartItemContainer .CartImage{
+
+}
+.offcanvasItem{
+  padding-block: 18px;
+  border-bottom: 1px solid #E0E1ED;
+}
+.OffCanvasBtn .Primay{
+  border-radius: 12px 0px;
+  background: var(--foundation-red-normal-hover, #C90020);
+  margin-bottom: 18px;
+  /* Button Shadow */padding: 16px 24px;
+  display: block;
+  text-align: center;
+  color: white;
+  box-shadow: 0px 17px 33px -2px rgba(223, 0, 36, 0.08);
+}
+.OffCanvasBtn .secondry{
+  border-radius: 12px 0px;
+  background: var(--Foundation-Blue-Normal, #2F3584);
+  text-align: center;
+  
+  display: block;
+  /* Button Shadow */
+  color: white;
+  /* Button Shadow */padding: 16px 24px;
+
+  box-shadow: 0px 17px 33px -2px rgba(223, 0, 36, 0.08);
+}
